--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,14 @@ main {
   /* border: 1px solid rgba(170, 170, 170, 0.726); */
 }
 
+#gray-container h1 {
+  font-size: 4vw;
+}
+
+#gray-container p {
+  font-size: 1.5vw;
+}
+
 #gray-container p::selection,
 h1::selection {
   background-color: rgba(62, 115, 122, 0.808);
@@ -121,6 +129,7 @@ h1::selection {
   max-width: 160px;
   max-height: 70px;
   object-fit: contain;
+  filter: grayscale(100%);
 }
 
 .smallpic:hover {
@@ -131,5 +140,25 @@ h1::selection {
   -webkit-box-shadow: -1px 1px 27px 1px rgba(255, 255, 255, 0.829);
   -moz-box-shadow: -1px 1px 27px 1px rgba(255, 255, 255, 0.842);
   box-shadow: -1px 1px 27px 1px rgba(255, 255, 255, 0.856);
+  border-radius: 5px;
+  filter: brightness(120%);
+  transition-duration: 0.3s;
+}
+
+#textbox {
+  /* position: absolute;
+  bottom: 80px;
+  left: 200px; */
+  width: 40%;
+  height: 10%;
+  /* border: 1px solid red; */
+  text-align: center;
+  margin: auto;
+  padding: 0 10px;
+
+  font-family: "Josefin Sans", sans-serif;
+  color: rgba(255, 255, 255, 0.698);
+  background-color: rgba(0, 0, 0, 0.205);
+  display: none;
   border-radius: 5px;
 }
